--- a/assets/pics/favicon_package_v0.16/site.webmanifest.json
+++ b/assets/pics/favicon_package_v0.16/site.webmanifest.json
@@ -11,6 +11,11 @@
             "src": "/android-chrome-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
+        },
+        {
+            "src": "../T_T.png",
+            "sizes": "256x256",
+            "type": "image/png"
         }
     ],
     "theme_color": "#ffffff",
